# xbox-speed-test

./: Cargo.toml  README.md  cdn-cn.list  cdn.list
src/: main.rs
